Added loading animated icon in lobby

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -89,6 +89,8 @@ sessions:
 coffeechat:
   title: Coffee chat
   readyBtn: Ready
+  waitingBtn: Waiting
+  joiningBtn: Joining
   filters:
     languages:
       EN: English
