--- a/src/content/faqs/en.mdx
+++ b/src/content/faqs/en.mdx
@@ -1,7 +1,7 @@
-#Frequently Asked Questions (FAQ’s) - Climate Red Host#
+# Frequently Asked Questions (FAQ’s) - Climate Red Host #
 
 
-##Host Details##
+## Host Details##
 
 **Can I edit details of my session?**
 
@@ -23,3 +23,10 @@ With over 200 sessions in the summit, this is bound to happen, just like it does
 
 I have a pre-recorded video/statement I would like to use in my session. How should I share this?
 If you are using it in your session, you will have to manage this yourself.  However, if you want us to use it to help promote your session, then send it to solferino.academy@ifrc.org
+
+---
+
+## Communications ##
+
+**We’re preparing a flyer/communication for our session. Is there a template or certain logos we should use?**
+ We have a range of [communications tools available](https://future-rcrc.com/2020/08/31/climate-red-communications-pack) .  Feel free to use these.  Creating your own short ‘selfie video promoting your session and the summit can also be a good way to get people to join.  Remember to use the climate.red link to the platform, and if using social media please use the hashtag #ClimateRed. Once the schedule is published, your session will be available for registration.
