--- a/src/content/faqs/fr.mdx
+++ b/src/content/faqs/fr.mdx
@@ -43,7 +43,8 @@ Si vous l'utilisez dans votre session, vous devrez la gérer vous-même. Toutefo
 
 Différentes plateformes sont adaptées à différentes choses ; vous pouvez voir certains de nos conseils [ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools). Le zoom, par exemple, est idéal pour l'interprétation et le travail en petits groupes, mais à moins que vous n'ayez un compte premium, vous ne pouvez avoir que 100 personnes et il y a un temps limite de 40 minutes.  Google meet est gratuit, mais ne dispose pas de certaines des fonctions de Zoom. De nombreuses options sont disponibles, alors faites des recherches et utilisez ce qui vous semble le plus confortable et le plus sûr. [Ce tableau](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp) de l'Association for Computing Machinery (ACM) pourrait vous être utile.
 
-**Puis-je utiliser le compte Zoom de la FICR? **
+
+**Puis-je utiliser le compte Zoom de la FICR?**
 
 En général, si vous organisez votre propre session, vous devez fournir votre propre plate-forme de réunion numérique (Zoom, Google Meet, équipes Microsoft, etc.).  Nous offrons le compte Zoom de la conférence à un nombre limité de sessions, mais nous donnons la priorité aux sessions en provenance de pays à faible revenu et à celles qui font l'objet d'un grand reportage.  Toutefois, si vous n'avez pas d'autres options, veuillez nous contacter à l'adresse solferino.academy@ifrc.org et nous verrons ce que nous pouvons faire.
 
@@ -54,9 +55,10 @@ Oui, tous les participants doivent s'inscrire, y compris les orateurs.  La bonne
 **Quel soutien technique sera offert pour ma session, et que dois-je couvrir?**
 
 Si vous organisez votre propre atelier, vous devrez gérer vous-même la plateforme et les participants.  Nous aimerions soutenir tout le monde, mais il y a plus de 200 sessions au Sommet et nous ne pouvons pas toutes les accueillir. Toutefois, si vous souhaitez obtenir de l'aide, nous organisons des sessions de formation pour les hôtes. Les sessions d'orientation pour les hôtes du 8 septembre vous permettront d'obtenir des informations essentielles avant le début du sommet et de répondre à toute autre question que vous pourriez avoir :
-8 septembre - 10h CEST - [Inscription](https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1)
-8 septembre - 17h CEST - [Inscription](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
-Nous avons également [produit un manuel](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf) avec des suggestions utiles pour les hôtes. Si vous avez besoin de conseils supplémentaires, n'hésitez pas à nous contacter à l'adresse suivante : solferino.academy@ifrc.org 
+
+* 8 septembre - 10h CEST - [Inscription](https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1)
+* 8 septembre - 17h CEST - [Inscription](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
+* Nous avons également [produit un manuel](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf) avec des suggestions utiles pour les hôtes. Si vous avez besoin de conseils supplémentaires, n'hésitez pas à nous contacter à l'adresse suivante : solferino.academy@ifrc.org 
 
 Pendant le sommet, des volontaires en ligne seront prêts à répondre aux questions par le biais d'un chatbot. Nous vous recommandons vivement, si vous organisez et animez vous-même la session, de demander à un ami ou à un collègue de vous aider et d'indiquer son adresse électronique comme information de contact principale.  Sinon, vous risquez de recevoir beaucoup de courriels de personnes souhaitant s'inscrire alors que vous êtes déjà occupé à héberger votre session.
  
