--- a/src/content/faqs/en.mdx
+++ b/src/content/faqs/en.mdx
@@ -52,9 +52,10 @@ Yes, all participants need to register, including the speakers.  The good news i
 **What technical support will be offered for my session, and what do I need to cover?**
 
 If you are hosting your own workshop, you will need to manage the platform and participants yourself.  We would love to support everyone, but there are over 200 sessions at the Summit and we can’t host them all. However, if you want some help, we are running training sessions for hosts Session Host Orientation Sessions on September 8th for critical information before the summit starts and any further questions you may have answered:
-September 8th - 10am CEST - [Register](https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1)
-September 8th - 5pm CEST - [Register](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
-We have also produced a [handbook](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf) with helpful suggestions for hosts. If you need some extra advice reach out to us at solferino.academy@ifrc.org
+
+* September 8th - 10am CEST - [Register](https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1)
+* September 8th - 5pm CEST - [Register](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
+* We have also produced a [handbook](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf) with helpful suggestions for hosts. If you need some extra advice reach out to us at solferino.academy@ifrc.org
 
 During the summit we will have volunteers online ready to answer questions through a chatbot. We strongly recommend that if you are hosting and moderating the session yourself, you get a friend or a colleague to help you and list their email as the primary contact info.  Otherwise you may get a lot of emails from people wanting to join while you are already busy hosting your session.
  
