--- a/src/content/faqs/es.mdx
+++ b/src/content/faqs/es.mdx
@@ -3,24 +3,59 @@
 
 ##  Detalles del Host: ##
 
-¿Puedo editar los detalles de mi sesión?
-La fecha límite para editar sus datos en el Área de acceso de host <https://go.climate.red/sessions> es el 4 de septiembre. 
+**¿Puedo editar los detalles de mi sesión?**
+
+La fecha límite para editar sus datos en el [Área de acceso de host](https://go.climate.red/sessions) es el 4 de septiembre. 
 Los detalles de su sesión no se pueden cambiar después  de la fecha límite.
 
 
-¿Cuándo es la fecha límite para enviar mi intervención  y cómo pueden verla los demás?
+**¿Cuándo es la fecha límite para enviar mi intervención  y cómo pueden verla los demás?**
+
 Las intervenciones tienen que ser mandadas a más tardar el 4 de septiembre. Se programaran en la agenda de la cumbre y se le notificará cuando se muestre su video. Generalmente se encontrará en una lista de reproducción junto a otras 2 o 3 intervenciones con temas similares a los suyos. Los interventos se reproduceran  dentro de la plataforma climate:red,  por lo tanto asegúrese de pedirle a su audiencia que se registre y se una al evento.
 
 La Chat funcionará en la plataforma durante tu intervento. Debes estar en línea y presentarte como el presentador para que la gente pueda conocer a la estrella y hacerte preguntas.
 
-Me estoy ocupando de la interpretación, ¿cómo puedo comunicar y gestionar esto?
-Debe informarnos que tiene la intención de proporcionar una traducción enviando un correo electrónico a climateredsummit@climatecentre.org.
-Añádelo también a su resumen. La sesión estará disponible en los idiomas para los que está interpretando. 
-Gestionar la interpretación puede ser complicado si no lo has hecho antes pero es fácil de aprender. Recomendamos Zoom como plataforma. Si necesitas algún consejo escribe a  solferino.academy@ifrc.org 
+**Me estoy ocupando de la interpretación, ¿cómo puedo comunicar y gestionar esto?**
 
-¿Qué pasa si mi sesión se superpone con otra que tiene un público objetivo similar?
+Debe informarnos que tiene la intención de proporcionar una traducción enviando un correo electrónico a climateredsummit@climatecentre.org. Añádelo también a su resumen. La sesión estará disponible en los idiomas para los que está interpretando. Gestionar la interpretación puede ser complicado si no lo has hecho antes pero es fácil de aprender. Recomendamos Zoom como plataforma. Si necesitas algún consejo escribe a  solferino.academy@ifrc.org 
+
+**¿Qué pasa si mi sesión se superpone con otra que tiene un público objetivo similar?**
+
 Con más de 200 sesiones en la Cumbre, esto seguramente sucederá, como sucede con cualquier conferencia tan grande.
 Solo debes asegurarte de promover ampliamente tu sesión en tus redes y de tener un título  interesante para que la gente se entusiasme con tu sesión.
 
 Tengo un video/declaración pre-grabado que me gustaría usar en mi sesión. ¿Cómo debo compartirlo?
 Si lo estas utilizando en tu sesión deberás ocuparte de esto tu mismo.  Sin embargo, si deseas que lo usemos para ayudar a promover tu sesión, envíalo a solferino.academy@ifrc.org  
+
+
+---
+
+## Communications ##
+
+Estamos preparando un folleto/ una comunicación para nuestra sesión. ¿Hay un modelo o determinados logos que debemos utilizar?
+Tenemos una variedad de [instrumentos de comunicación](https://future-rcrc.com/2020/08/31/climate-red-communications-pack/). No dude en utilizarlos.  Crea tu propio breve video “selfie” para promover tu sesión y la cumbre, esto también puede ser una buena manera para atraer a la gente. Acuérdate de utilizar el enlace climate.red a la plataforma, y si usas redes sociales por favor utiliza el hashtag #ClimateRed. Una vez que se publique el programa, tu sesión estará disponible para registrarse.
+
+---
+
+## Technologia ##
+
+**Si tengo que configurar mi sesión, ¿qué plataforma es mejor? ¿Cuántas personas pueden llevar Teams, Skype para empresas? ¿Cómo puedo crear mi propia cuenta de zoom?**
+
+Las  plataformas distintas sirven para distintas cosas; puedes ver algunos de nuestros consejos [aquí](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools). Zoom, por ejemplo, es bueno para la interpretación y el trabajo en grupos pequeños, pero a menos que tenga una cuenta premium, solo puede tener 100 personas y solo funciona durante 40 minutos. 
+Google Meet es gratuito, pero no tiene algunas de las funciones que tiene Zoom. Hay muchas opciones disponibles, así que investigue un poco y use lo que le resulte más cómodo y seguro. [Esta cuadro:](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp) de l’association for Computer Machiner (ACM) puede ser util. 
+
+
+**¿Puedo utilizar la cuenta Zoom de la IFRC?**
+
+En general, si estás organizando tu propia sesión, debes ofrecer tu propia plataforma de reuniones digitales (Zoom, Google Meet, equipos de Microsoft, etc.).
+Estamos ofreciendo la cuenta Conference Zoom para un número limitado de sesiones, pero damos prioridad a las sesiones de países de bajos ingresos y aquellos que tienen muchas sesiones importantes.
+Sin embargo, si no tiene ninguna opción, contáctenos en solferino.academy@ifrc.org  y veremos qué podemos hacer. 
+
+**¿Todos los participantes (incluidos los oradores) deben registrarse para Climate: Red, o puedo simplemente compartir el enlace de mi sesión con la gente?**
+
+Sì todos los participantes deben registrarse, incluidos los oradores. La buena noticia es que el proceso para registrarse es muy sencillo. Una vez que las personas se registran e inician sesión, pueden acceder a la agenda completa de la cumbre, unirse a charlas de café y disfrutar de toda la experiencia de la conferencia. También nos ayuda a saber cuántas personas están participando.
+
+**Que soporte técnico se ofrecerá para mi sesión y de que me tengo que ocupar?**
+
+Si estás organizando tu propio taller, deberás administrar la plataforma y los participantes tú mismo.Nos encantaría apoyar a todos, pero hay más de 200 sesiones en la Cumbre y no podemos organizarlas todas. in embargo, si necesita ayuda, estamos organizando sesiones de capacitación para anfitriones Host Orientation Sessions el 8 de septiembre 
+
