--- a/src/content/faqs/ar.mdx
+++ b/src/content/faqs/ar.mdx
@@ -1,1 +1,74 @@
 # الأسئلة المتداولة - مقدمي جلسات مؤتمر الصليب الأحمر والهلال الأحمر بشأن المناخ #
+
+
+** ١- هل يمكنني تعديل تفاصيل جلستي؟ **
+الموعد النهائي لتعديل التفاصيل الخاصة بك في منطقة الخاصة بالمضيف<https://go.climate.red/sessions> >هو 4 سبتمبر. لا يمكن تغيير تفاصيل جلستك بعد الموعد النهائي.
+ 
+**ما هو الموعد النهائي لإرسال فيديو لجلسة لطرح الأفكار وكيف يمكن للآخرين رؤيته؟**
+
+يجب تقديم الفيديو الخاص بكلمتك في موعد لا يتجاوز 4 سبتمبر. سيتم إدراجه في جدول أعمال القمة وسيتم إعلامك بوقت تشغيل الفيديو. عادة ما يكون الفيديو في قائمة تشغيل مع ٢-٣ محادثات أخرى مشوقة مع مواضيع مماثلة لموضوعك. يتم تشغيل المحادثات المشوقة داخل قمة المناخ، لذا تأكد من مطالبة جمهورك بالتسجيل والانضمام إلى الحدث.
+ 
+سيتم فتح خاصية الدردشة في المنصة أثناء حديثك. يجب أن تكون متصلاً بالإنترنت وتقدم نفسك كمقدم حتى يتمكن الناس من مقابلة النجم/النجمة وطرح الأسئلة عليك.
+ 
+**٣- أقوم بتقديم الترجمة الفورية، كيف يمكنني توصيل ذلك وإدارته؟**
+يجب أن تخبرنا أنك تنوي تقديم الترجمة عن طريق البريد الإلكتروني climateredsummit@climatecentre.org. أضفه أيضًا إلى الملخص الخاص بك. ستكون جلستك بعد ذلك متاحة باللغات التي تترجم لها. قد تكون إدارة الترجمة صعبة إذا لم تكن قد قمت بها من قبل، ولكن من السهل تعلمها. ننصح "بزوم" كمنصة. إذا كنت تريد بعض النصائح، فاكتب إلى solferino.academy@ifrc.org
+
+**٤- ماذا لو تداخلت جلستي مع جلسة أخرى لها نفس الجمهور المستهدف؟**
+مع وجود أكثر من ٢٠٠ جلسة في القمة، لا بد أن يحدث هذا تمامًا كما يحدث في أي مؤتمر بهذا الحجم. عليك فقط التأكد من الترويج لجلستك على نطاق واسع لشبكاتك وأن يكون لديك عنوانًا مثيرًا للاهتمام لإثارة حماس الناس لجلستك.
+ 
+٥- لدي مقطع فيديو / بيان مسجل مسبقًا أود استخدامه في جلستي. كيف يمكنني مشاركة هذا؟
+إذا كنت تستخدمه في جلستك، فسيتعين عليك إدارة هذا بنفسك. ومع ذلك، إذا كنت تريد منا استخدامه للمساعدة في الترويج لجلستك، فأرسلها إلى solferino.academy@ifrc.org
+
+---
+
+# مجال التواصل #
+
+**١- نحن نقوم بإعداد نشرة إعلانية لجلستنا. هل هناك نموذج أو شعارات معينة يجب أن نستخدمها؟** 
+  لدينا مجموعة من أدوات التواصل المتاحة على
+<https://future-rcrc.com/2020/08/31/climate-red-communications-pack/>
+لا تتردد في استخدامها. يمكن أن يكون إنشاء فيديو قصير على طريقة التصوير الذاتي (السيلفي) للترويج لجلستك والقمة وسيلة جيدة لجذب الناس للانضمام. تذكر استخدام رابط  climate.red، وإذا كنت تستخدم وسائل التواصل الاجتماعي ، فيرجى استخدام هاشتاغ #ClimateRed.
+بمجرد نشر الجدول، ستكون جلستك متاحة للتسجيل.
+ 
+---
+
+
+# معلومات تقنية #
+
+ **١- إذا كان لا بد لي من إعداد جلستي، فما هي المنصة الأفضل؟ كم عدد الأشخاص الذين يمكن لفرق سكايب للأعمال القيام بها؟ كيف أقوم بإعداد حساب "الزوم" الخاص بي؟**
+ 
+المنصات المختلفة مفيدة لأسباب مختلفة؛ يمكنك الاطلاع على بعض نصائحنا هنا
+<https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#tools>
+يعد Zoom على سبيل المثال مفيدًا للترجمة الفورية والعمل الجماعي الصغير، ولكن ما لم يكن لديك حساب مدفوع، يمكنك فقط استضافة ١٠٠ شخص ويعمل لمدة ٤٠ دقيقة فقط. Google Meet مجاني ولكن ليس لديه بعض الوظائف التي يوفرها زوم، هناك الكثير من الخيارات المتاحة ، لذلك قم ببعض الأبحاث واستخدم ما تشعر بالراحة والثقة تجاهه. قد يكون هذا الجدول  <https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp>
+من جمعية ماكينات الحوسبة (ACM) مفيدًا.
+
+**٢- هل يمكنني استخدام حساب IFRC Zoom؟**
+
+بشكل عام، إذا كنت تستضيف جلستك الخاصة، فيجب عليك توفير منصة الاجتماعات الرقمية الخاصة بك (Zoom ، Google Meet ، فرق Microsoft ، إلخ). نحن نعرض حساب Zoom على عدد محدود من الجلسات، لكننا نعطي الأولوية لأولئك من البلدان منخفضة الدخل وتلك التي لديها جلسات مميزة. ومع ذلك، إذا لم يكن لديك أي خيارات، فيرجى الاتصال بنا على solferino.academy@ifrc.org وسنرى ما يمكننا فعله.
+ 
+ 
+**٣- هل يحتاج جميع المشاركين (بما في ذلك المتحدثون) إلى التسجيل في مؤتمر، أم يمكنني مشاركة رابط جلستي مع الأشخاص؟**
+
+نعم، يجب على جميع المشاركين التسجيل، بما في ذلك المتحدثون. الخبر السار هو أن عملية التسجيل سهلة للغاية. بمجرد تسجيل الأشخاص وتسجيل الدخول، يمكنهم الوصول إلى جدول الأعمال الكامل للقمة، والانضمام إلى محادثات حول فنجان قهوة والاستمتاع بتجربة المؤتمر بأكملها. كما أن ذلك يساعدنا على معرفة عدد الأشخاص المشاركين.
+ 
+**٤- ما هو الدعم الفني الذي سيتم تقديمه لجلستي، وماذا أحتاج إلى تغطيته؟**
+إذا كنت تستضيف ورشة العمل الخاصة بك، فستحتاج إلى إدارة المنصة والمشاركين بنفسك. نود دعم الجميع، لكن هناك أكثر من ٢٠٠ جلسة في القمة ولا يمكننا استضافتهم جميعًا. ومع ذلك، إذا كنت تريد بعض المساعدة، فنحن ندير جلسات تدريبية لمقدمي الجلسات في 8 سبتمبر للحصول على معلومات مهمة قبل بدء القمة وأي أسئلة أخرى ربما تكون قد أجبت عليها:
+8 سبتمبر - 10 صباحًا بتوقيت وسط أوروبا الصيفي - التسجيل <https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1>
+8 سبتمبر - 5 مساءً بتوقيت وسط أوروبا الصيفي - التسجيل<https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq>
+ 
+ 
+لقد أصدرنا أيضًا كتيبًا
+<https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf>
+
+ يحتوي على اقتراحات مفيدة لمقدمي الجلسات. إذا كنت بحاجة إلى بعض النصائح الإضافية، تواصل معنا على solferino.academy@ifrc.org
+ 
+خلال القمة، سيكون لدينا متطوعون عبر الإنترنت جاهزون للإجابة على الأسئلة من خلال روبوت المحادثات. نوصي بشدة أنه إذا كنت تستضيف الجلسة وتديرها بنفسك، أن تحصل على صديق أو زميل لمساعدتك وإدراج بريده الإلكتروني كمعلومات الاتصال الأساسية. وإلا فقد تتلقى الكثير من رسائل البريد الإلكتروني من الأشخاص الراغبين في الانضمام أثناء انشغالك باستضافة جلستك.
+
+**٥- هل يمكنني إعداد "إدخال مقيد" لجلستي حتى يتمكن المشاركون المختارون فقط من الدخول؟**
+نعم يمكنك ذلك، ولكن يجب عليك إخبارنا بذلك في بداية الملخص الخاص بك. يمكنك إضافة هذا من خلال المنطقة الخاصة بمقدم الجلسة
+<https://go.climate.red/sessions>
+وسنضع إعلانًا عن الأماكن المحدودة المتاحة بجوار جلستك. سيتمكن الأشخاص من تسجيل اهتمامهم بجلستك. ثم يتم إرسال معلوماتهم إليك ويمكنك اختيار عدد الأشخاص الذين تريد الوصول إليهم. سترسل لهم بعد ذلك رابطًا لجلستك. لن يكون هذا الرابط متاحًا لعامة الناس على النظام الأساسي لمؤتمر القمة.
+
+**٦- هل سيتمكن الأشخاص من التسجيل في جلستي مسبقًا؟**
+نعم، سيكون الجدول الزمني الكامل متاحًا قبل القمة، ويمكن للمشاركين تسجيل اهتمامهم بحضور جلستك. ستتمكن من معرفة مدى الاهتمام بجلستك لمساعدتك على التخطيط وفقًا لذلك. يقوم الكثير من الأشخاص بالتسجيل في هذه القمة، لذا من المحتمل أن تكون جلستك شائعة جدًا. يجب أن تلاحظ أنه على الرغم من أن الأشخاص غالبًا ما يبدون اهتمامًا بحضور شيء ما ثم لا يحضرون. (كلنا لدينا أصدقاء من هذا القبيل). لذا توقع ألا يحضر الجميع. بالعكس، قد لا يسجل العديد من الأشخاص اهتمامهم إلا قبل الجلسة مباشرة، أو يحضرون فقط دون تسجيل الاهتمام.
+
+
