--- a/src/content/faqs/es.mdx
+++ b/src/content/faqs/es.mdx
@@ -57,5 +57,18 @@ Sì todos los participantes deben registrarse, incluidos los oradores. La buena 
 
 **Que soporte técnico se ofrecerá para mi sesión y de que me tengo que ocupar?**
 
-Si estás organizando tu propio taller, deberás administrar la plataforma y los participantes tú mismo.Nos encantaría apoyar a todos, pero hay más de 200 sesiones en la Cumbre y no podemos organizarlas todas. in embargo, si necesita ayuda, estamos organizando sesiones de capacitación para anfitriones Host Orientation Sessions el 8 de septiembre 
+Si estás organizando tu propio taller, deberás administrar la plataforma y los participantes tú mismo.Nos encantaría apoyar a todos, pero hay más de 200 sesiones en la Cumbre y no podemos organizarlas todas. sin embargo, si necesita ayuda, estamos organizando sesiones de capacitación para anfitriones Host Orientation Sessions el 8 de septiembre para obtener informaciones importantes antes de que comience la cumbre y responderán a cualquier otra pregunta que puede tener: 
+
+* 8 de Septiembre - 10h CEST - [Registrarse](https://zoom.us/meeting/register/tJArdOGurDkjGNWp5UAsbX7J5lgEEaTpv0D1)
+* 8 de septiembre - 17h CEST - [Registrarse](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
+* Tambien hemos elaborado [un manual](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf) con sugerencias útiles para los anfitriones. Si necesita algún consejo adicional, comuníquese con nosotros en solferino.academy@ifrc.org
+
+**¿Puedo establecer una entrada restringida para mi sesión para que solo los participantes seleccionados puedan participar?**
+
+Sí, puede, pero debe comunicárnoslo al comienzo de su resumen. Puedes agregar esto a través del área de acceso del anfitrión <https://go.climate.red/sessions>  y mostraremos un anuncio de las plazas limitadas disponibles cerca de tu sesión. Las personas podrán expresar el interés por tu sesión.  Luego, te enviaremos su información y podrás elegir cuántos y a quién deseas tenga acceso. Este enlace no estará disponible para el público general en la plataforma climate.red. 
+
+**¿Las personas podrán registrarse previamente para mi sesión?**
+
+Sí, el calendario completo estará disponible antes de la cumbre y los participantes pueden registrar su interés en asistir a su sesión. Podrás ver cuánto interés hay para tu sesión y ser capaz de planificarla de consecuencia. Mucha gente se está registrando a la  cumbre, por lo que es posible que su sesión sea muy popular. Sin embargo, debes tener en cuenta que a menudo las personas muestran interés en asistir a  algo y luego no se presentan.  (Todos tenemos amigos así). así que espere que no todos se presenten. Envés, es posible que muchas personas no expresen su interés hasta poco tiempo antes de la sesión o se presenten sin haber registrado su interés.
+
 
