--- a/src/content/faqs/en.mdx
+++ b/src/content/faqs/en.mdx
@@ -4,7 +4,9 @@
 
 **Can I edit details of my session?**
 
-The deadline to edit your details on [Host Access Area](https://go.climate.red/sessions) is September 4th. Your session details cannot be changed beyond the deadline.
+The deadline to edit your details on
+[Host Access Area](https://go.climate.red/sessions)
+is September 4th. Your session details cannot be changed beyond the deadline.
 
 **When is the deadline for sending my ignite talk and how can others see it?**
 
@@ -29,7 +31,9 @@ If you are using it in your session, you will have to manage this yourself. Howe
 
 **We’re preparing a flyer/communication for our session. Is there a template or certain logos we should use?**
 
-We have a range of [communications tools available](https://future-rcrc.com/2020/08/31/climate-red-communications-pack) . Feel free to use these. Creating your own short ‘selfie video promoting your session and the summit can also be a good way to get people to join. Remember to use the climate.red link to the platform, and if using social media please use the hashtag #ClimateRed. Once the schedule is published, your session will be available for registration.
+We have a range of
+[communications tools available](https://future-rcrc.com/2020/08/31/climate-red-communications-pack).
+Feel free to use these. Creating your own short ‘selfie video promoting your session and the summit can also be a good way to get people to join. Remember to use the climate.red link to the platform, and if using social media please use the hashtag #ClimateRed. Once the schedule is published, your session will be available for registration.
 
 ---
 
@@ -37,7 +41,11 @@ We have a range of [communications tools available](https://future-rcrc.com/2020
 
 **If I have to set up my session, which platform is best? How many people can teams, skype for business take? How do I set up my own zoom account?**
 
-Different platforms are good for different things; you can see some of our advice [here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#tools). Zoom for instance is good for interpretation and small group work, but unless you have a premium account, you can only have 100 people and it only works for 40 minutes. Google meet is free but doesn’t have some of the functions Zoom has. There are a lot of options available, so do some research and use what you feel most comfortable and confident with. [This table](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp) from the Association for Computing Machinery (ACM) might be helpful.
+Different platforms are good for different things; you can see some of our advice
+[here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#tools).
+Zoom for instance is good for interpretation and small group work, but unless you have a premium account, you can only have 100 people and it only works for 40 minutes. Google meet is free but doesn’t have some of the functions Zoom has. There are a lot of options available, so do some research and use what you feel most comfortable and confident with.
+[This table](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp)
+from the Association for Computing Machinery (ACM) might be helpful.
 
 **Can I use the IFRC Zoom account?**
 
@@ -59,7 +67,9 @@ During the summit we will have volunteers online ready to answer questions throu
 
 **Can I set up a restricted entry for my session so that only selected participants can enter?**
 
-Yes you can, but you must notify us of this right at the start of your abstract. You can add this through the [host access area](https://go.climate.red/sessions), and we will put an announcement of limited places available next to your session. People will be able to register their interest for your session. Their info is then sent to you and you can choose how many and who you want to have access. You will then send them a link to your session. This link will not be available to the general public on the climate.red platform.
+Yes you can, but you must notify us of this right at the start of your abstract. You can add this through the
+[host access area](https://go.climate.red/sessions),
+and we will put an announcement of limited places available next to your session. People will be able to register their interest for your session. Their info is then sent to you and you can choose how many and who you want to have access. You will then send them a link to your session. This link will not be available to the general public on the climate.red platform.
 
 **Will people be able to register for my session beforehand?**
 
