--- a/src/content/faqs/es.mdx
+++ b/src/content/faqs/es.mdx
@@ -4,7 +4,9 @@
 
 **¿Puedo editar los detalles de mi sesión?**
 
-La fecha límite para editar sus datos en el [Área de acceso de host](https://go.climate.red/sessions) es el 4 de septiembre.
+La fecha límite para editar sus datos en el
+[Área de acceso de host](https://go.climate.red/sessions)
+es el 4 de septiembre.
 Los detalles de su sesión no se pueden cambiar después de la fecha límite.
 
 **¿Cuándo es la fecha límite para enviar mi intervención y cómo pueden verla los demás?**
@@ -30,7 +32,9 @@ Si lo estas utilizando en tu sesión deberás ocuparte de esto tu mismo. Sin emb
 ## Communications
 
 Estamos preparando un folleto/ una comunicación para nuestra sesión. ¿Hay un modelo o determinados logos que debemos utilizar?
-Tenemos una variedad de [instrumentos de comunicación](https://future-rcrc.com/2020/08/31/climate-red-communications-pack/). No dude en utilizarlos. Crea tu propio breve video “selfie” para promover tu sesión y la cumbre, esto también puede ser una buena manera para atraer a la gente. Acuérdate de utilizar el enlace climate.red a la plataforma, y si usas redes sociales por favor utiliza el hashtag #ClimateRed. Una vez que se publique el programa, tu sesión estará disponible para registrarse.
+Tenemos una variedad de
+[instrumentos de comunicación](https://future-rcrc.com/2020/08/31/climate-red-communications-pack/).
+No dude en utilizarlos. Crea tu propio breve video “selfie” para promover tu sesión y la cumbre, esto también puede ser una buena manera para atraer a la gente. Acuérdate de utilizar el enlace climate.red a la plataforma, y si usas redes sociales por favor utiliza el hashtag #ClimateRed. Una vez que se publique el programa, tu sesión estará disponible para registrarse.
 
 ---
 
@@ -38,8 +42,12 @@ Tenemos una variedad de [instrumentos de comunicación](https://future-rcrc.com/
 
 **Si tengo que configurar mi sesión, ¿qué plataforma es mejor? ¿Cuántas personas pueden llevar Teams, Skype para empresas? ¿Cómo puedo crear mi propia cuenta de zoom?**
 
-Las plataformas distintas sirven para distintas cosas; puedes ver algunos de nuestros consejos [aquí](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools). Zoom, por ejemplo, es bueno para la interpretación y el trabajo en grupos pequeños, pero a menos que tenga una cuenta premium, solo puede tener 100 personas y solo funciona durante 40 minutos.
-Google Meet es gratuito, pero no tiene algunas de las funciones que tiene Zoom. Hay muchas opciones disponibles, así que investigue un poco y use lo que le resulte más cómodo y seguro. [Esta cuadro:](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp) de l’association for Computer Machiner (ACM) puede ser util.
+Las plataformas distintas sirven para distintas cosas; puedes ver algunos de nuestros consejos
+[aquí](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools).
+Zoom, por ejemplo, es bueno para la interpretación y el trabajo en grupos pequeños, pero a menos que tenga una cuenta premium, solo puede tener 100 personas y solo funciona durante 40 minutos.
+Google Meet es gratuito, pero no tiene algunas de las funciones que tiene Zoom. Hay muchas opciones disponibles, así que investigue un poco y use lo que le resulte más cómodo y seguro.
+[Esta cuadro:](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp)
+de l’association for Computer Machiner (ACM) puede ser util.
 
 **¿Puedo utilizar la cuenta Zoom de la IFRC?**
 
@@ -61,7 +69,9 @@ Si estás organizando tu propio taller, deberás administrar la plataforma y los
 
 **¿Puedo establecer una entrada restringida para mi sesión para que solo los participantes seleccionados puedan participar?**
 
-Sí, puede, pero debe comunicárnoslo al comienzo de su resumen. Puedes agregar esto a través del área de acceso del anfitrión <https://go.climate.red/sessions> y mostraremos un anuncio de las plazas limitadas disponibles cerca de tu sesión. Las personas podrán expresar el interés por tu sesión. Luego, te enviaremos su información y podrás elegir cuántos y a quién deseas tenga acceso. Este enlace no estará disponible para el público general en la plataforma climate.red.
+Sí, puede, pero debe comunicárnoslo al comienzo de su resumen. Puedes agregar esto a través del área de acceso del anfitrión
+[Área de acceso de host](https://go.climate.red/sessions)
+y mostraremos un anuncio de las plazas limitadas disponibles cerca de tu sesión. Las personas podrán expresar el interés por tu sesión. Luego, te enviaremos su información y podrás elegir cuántos y a quién deseas tenga acceso. Este enlace no estará disponible para el público general en la plataforma climate.red.
 
 **¿Las personas podrán registrarse previamente para mi sesión?**
 
