--- a/src/content/faqs/fr.mdx
+++ b/src/content/faqs/fr.mdx
@@ -4,7 +4,9 @@
 
 **Puis-je modifier les détails de ma session?**
 
-La date limite pour modifier les détails de votre session sur le site [Host Access Area](https://go.climate.red/sessions) est le 4 septembre. Les détails de votre session ne peuvent pas être modifiés au-delà de cette date limite.
+La date limite pour modifier les détails de votre session sur le site
+[Host Access Area](https://go.climate.red/sessions)
+est le 4 septembre. Les détails de votre session ne peuvent pas être modifiés au-delà de cette date limite.
 
 **Quelle est la date limite pour envoyer mon discours d'initiation et comment les autres personnes peuvent-elles le voir?**
 
@@ -29,7 +31,9 @@ Si vous l'utilisez dans votre session, vous devrez la gérer vous-même. Toutefo
 
 **Nous préparons un flyer/ une communication pour notre session. Y a-t-il un modèle ou certains logos que nous devrions utiliser**
 
-Nous disposons d'une série [d'outils de communication](https://future-rcrc.com/2020/08/31/climate-red-communications-pack). N'hésitez pas à les utiliser. Créer votre propre petite vidéo " selfie " pour promouvoir votre session et le sommet peut également être un bon moyen de faire participer les gens. N'oubliez pas d'utiliser le lien climate.red vers la plateforme, et si vous utilisez les médias sociaux, veuillez utiliser le hashtag #ClimateRed. Une fois le programme publié, votre session sera disponible pour l'inscription.
+Nous disposons d'une série
+[d'outils de communication](https://future-rcrc.com/2020/08/31/climate-red-communications-pack).
+N'hésitez pas à les utiliser. Créer votre propre petite vidéo " selfie " pour promouvoir votre session et le sommet peut également être un bon moyen de faire participer les gens. N'oubliez pas d'utiliser le lien climate.red vers la plateforme, et si vous utilisez les médias sociaux, veuillez utiliser le hashtag #ClimateRed. Une fois le programme publié, votre session sera disponible pour l'inscription.
 
 ---
 
@@ -37,7 +41,11 @@ Nous disposons d'une série [d'outils de communication](https://future-rcrc.com/
 
 **Si je dois organiser ma session, quelle est la meilleure plateforme ? Combien de personnes teams, skype for business peuvent-ils prendre ? Comment puis-je créer mon propre compte zoom?**
 
-Différentes plateformes sont adaptées à différentes choses ; vous pouvez voir certains de nos conseils [ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools). Le zoom, par exemple, est idéal pour l'interprétation et le travail en petits groupes, mais à moins que vous n'ayez un compte premium, vous ne pouvez avoir que 100 personnes et il y a un temps limite de 40 minutes. Google meet est gratuit, mais ne dispose pas de certaines des fonctions de Zoom. De nombreuses options sont disponibles, alors faites des recherches et utilisez ce qui vous semble le plus confortable et le plus sûr. [Ce tableau](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp) de l'Association for Computing Machinery (ACM) pourrait vous être utile.
+Différentes plateformes sont adaptées à différentes choses ; vous pouvez voir certains de nos conseils
+[ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/#tools).
+Le zoom, par exemple, est idéal pour l'interprétation et le travail en petits groupes, mais à moins que vous n'ayez un compte premium, vous ne pouvez avoir que 100 personnes et il y a un temps limite de 40 minutes. Google meet est gratuit, mais ne dispose pas de certaines des fonctions de Zoom. De nombreuses options sont disponibles, alors faites des recherches et utilisez ce qui vous semble le plus confortable et le plus sûr.
+[Ce tableau](https://docs.google.com/document/d/1LLLniPkf48CCZyG_BNy1ylF2wXNlztqNEOnzNuMQmJc/edit#heading=h.z6d7tgqcpugp)
+de l'Association for Computing Machinery (ACM) pourrait vous être utile.
 
 **Puis-je utiliser le compte Zoom de la FICR?**
 
