add faqs to the footer + fix arabic faq content

--- a/src/content/faqs/ar.mdx
+++ b/src/content/faqs/ar.mdx
@@ -64,6 +64,7 @@
   [التسجيل](https://zoom.us/meeting/register/tJYkde2pqD4pE9BuT_yNxxHfUXIZSR2ACobq)
 - لقد أصدرنا أيضًا
   [كتيبًا](https://future-rcrc.com/wp-content/uploads/2020/08/Climate-Red-Session-Hosts-Handbook-0820-B.pdf)
+  يحتوي على اقتراحات مفيدة لمقدمي الجلسات. إذا كنت بحاجة إلى بعض النصائح الإضافية، تواصل معنا على solferino.academy@ifrc.org
 
 يحتوي على اقتراحات مفيدة لمقدمي الجلسات. إذا كنت بحاجة إلى بعض النصائح الإضافية، تواصل معنا على solferino.academy@ifrc.org
 
