--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -202,3 +202,6 @@ schedule:
     workshops: ورشات العمل
     title: ورشات العمل التفاعلية
     description: شارك بإحدى ورش العمل التفاعلية التالية
+
+faqs:
+  title: أسئلة وأجوبة
