--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -202,3 +202,6 @@ schedule:
     workshops: Ateliers
     title: Ateliers interactifs
     description: Participez à l'un des ateliers interactifs suivants
+
+faqs:
+  title: FAQ
