Added internationalized strings to coffeechat

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -83,10 +83,20 @@ sessions:
 
 coffeechat:
   title: Coffee chat
+  filterResults: Active Participants
+  heading: Are you ready?
+  body: We'll use the settings below to match you with another Climate:Red attendee. Click the button below to video chat with another attendee.
   readyBtn: Ready
   waitingBtn: Waiting
   joiningBtn: Joining
   filters:
+    languageResults: Language(s)
+    themeResults: Theme(s)
+    anyOption: Any
+    languageSelector: Select languages
+    themeSelector: Select themes
+    clear: Clear
+    save: Save
     languages:
       EN: English
       FR: Française
@@ -103,7 +113,7 @@ coffeechatroom:
   title: Coffee chat
   waitingForPartner: Waiting for your partner to join
   joiningInfo: Joining Info
-  shareContactDetails: Share Contact Details
+  shareContactDetails: share contact details
   userMediaErrors:
     generalError: We're having trouble turning your webcam on
     devicesNotFoundError: check that your webcam is plugged in
@@ -111,6 +121,7 @@ coffeechatroom:
     constraintNotSatisfiedError: click the button below to retry
     typeError: click the button below to retry
     unknownError: click the button below to retry
+    retryButtonText: enable camera & mic
     instructions:
       safari: Open Safari Preferences > Navigate to Websites > Go to Camera and Microphone tabs > Change access to Allow > Restart Safari
       chrome: Click the camera blocked icon in your browser's address bar and then refresh the page
