--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -116,18 +116,14 @@ coffeechat:
       FR: Française
       ES: Español
       AR: العربية
-    themes:
-      health: Health
-      earlyWarningEarlyAction: Early Warning Early Action
-      conflict: Conflict
-      urban: Urban
-      climateSmartDdr: Climate Smart DDR
 
 coffeechatroom:
   title: Coffee chat
   waitingForPartner: Waiting for your partner to join
   joiningInfo: Joining Info
-  shareContactDetails: share contact details
+  contactDetails: Contact Details
+  shareContactDetails: Share Contact Details
+  confirmLeaveText: Are you sure you would like to leave this Coffee Chat?
   userMediaErrors:
     generalError: We're having trouble turning your webcam on
     devicesNotFoundError: check that your webcam is plugged in
