add community guidelines content and add to footer

--- a/src/content/guidelines/en.mdx
+++ b/src/content/guidelines/en.mdx
@@ -84,4 +84,7 @@ If you feel you have been unfairly accused of violating these guidelines, please
 
 ---
 
-> These guidelines were inspired by the Mozilla Community Participation Guideline & the RightsCon Participation & Privacy Guidelines
+> These guidelines were inspired by the
+> [Mozilla Community Participation Guideline](https://www.mozilla.org/en-US/about/governance/policies/participation)
+> & the
+> [RightsCon Participation & Privacy Guidelines](https://www.rightscon.org/participation-and-privacy)
