--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -105,12 +105,10 @@ coffeechatroom:
   joiningInfo: Informations sur l'adhésion
   # contactDetails: _
   shareContactDetails: partager les coordonnées
-  # confirmLeaveText: Are you sure you would like to leave this Coffee Chat?
-  # copyJoinText: Copy Join Info
-  # copiedJoinInfo: Copied Join Info!
-  # tooManyStreams: |
-  #   Unfortunately we are unable to provide more than 8 video streams at the same time.
-  #   Please reduce the number of users in the room or turn off your video feeds to maintain call quality.
+  # confirmLeaveText: _
+  # copyJoinText: _
+  # copiedJoinInfo: _
+  # tooManyStreams: _
   userMediaErrors:
     generalError: nous avons du mal à allumer votre webcam
     devicesNotFoundError: vérifiez que votre webcam soit bien branchée
